[gd_scene load_steps=2 format=3 uid="uid://bubauy1bm0yw2"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_wqgsw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqgsw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -50.5
offset_right = 46.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="New Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
